--- a/Sprint_1/apps/Frontend/angular.json
+++ b/Sprint_1/apps/Frontend/angular.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "../../node_modules/@angular/cli/lib/config/schema.json",
+  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -94,8 +94,8 @@
               "src/favicon.ico"
             ],
             "styles": [
-           "../node_modules/bootstrap/dist/css/bootstrap-grid.min.css",
-            "src/styles.css"
+           "node_modules/bootstrap/dist/css/bootstrap-grid.min.css",
+            "src/styles.scss"
             ],
             "scripts": [
             "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
