--- a/Sprint_1/apps/Frontend/tsconfig.json
+++ b/Sprint_1/apps/Frontend/tsconfig.json
@@ -1,9 +1,17 @@
 /* To learn more about Typescript configuration file: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html. */
 /* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
+
+
 {
-  "compileOnSave": false,
-  "compilerOptions": {
+
+    "compileOnSave": false,
+    "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
+    "paths": {
+      "@app/*": ["apps/Frontend/src/app/*"]  // Opcional: alias para imports
+    },
+    
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
